--- a/index.html
+++ b/index.html
@@ -34,11 +34,43 @@
         </div>
         <h1>Kassim Dzambo</h1>
         <h3>Softare<span> Developer.</span>Technical <span>Writer</span></h3>
-        <p>I am a developer with 3+ years of experience that keep clients<br> coming for our services.</p>
+        <p>I am a Softare engineer with 3+ years of experience that keep clients<br> coming for our services.</p>
         <div class="button">
           <a href="#" class="btn">About me</a>
         </div>
       </div>
+    </section>
+    
+    <!--Contact section-->
+    <section class="contact" id="contact">
+      <div class="contact-text">
+        <h2>Contact <span>Me!</span></h2>
+        <p>I'm a Software engineer and Technical writer-I create and build Software for all companies accross the world. </p>
+        <div class="list">
+          <li><a href= "#">0719441502</a></li>
+          <li><a href= "#">kassimdzambo06@gmail.com</a></li>
+        </div>
+
+        <div class="contact-icons">
+          <a href="#"><i class='bx bxl-whatsapp'></i></a>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+          <a href="#"><i class='bx bxl-dribbble'></i></a>
+          <a href="#"><i class='bx bxl-github'></i></a>
+       </div>
+
+
+        <div class="contact-form">
+          <form action ="">
+            <input type="name" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <input type="number" placeholder="Your mobile number" required>
+            <textarea name="" id="" cols="" rows="10" placeholder="How can i help You" required></textarea>
+            <input type = "submit" value="Send Message" class="submit" required>
+          </form>
+        </div>
+
+      </div>
+
     </section>
     
   
